assignments/1-k8sify-application/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assignment1-app
  namespace: YOUR-NAME-HERE
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    # Add external-dns annotation below:
    # external-dns.alpha.kubernetes.io/hostname: YOUR-NAME-HERE.a1.kumpan.btlc.dev
spec:
  tls:
    - hosts:
        - YOUR-NAME-HERE.a1.kumpan.btlc.dev
      secretName: assignment1-tls
  rules:
    - host: YOUR-NAME-HERE.a1.kumpan.btlc.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assignment1-app
                port:
                  number: 80
